angular and react app

--- a/src/components/angular/App/App.scss
+++ b/src/components/angular/App/App.scss
@@ -1,5 +1,6 @@
 .root {
   text-align: center;
+  margin: 5px;
 }
 
 .header {
@@ -7,8 +8,4 @@
   padding: 10px;
   color: white;
   font-size: 20pt;
-}
-
-.intro {
-  font-size: 15pt;
 }
