--- a/src/index.vm
+++ b/src/index.vm
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>${title}</title>
-    <link rel="stylesheet" href="${clientTopology.staticsBaseUrl}app#if(!${debug}).min#{end}.css">
-  </head>
-  <body>
-    <div id="visit-count">Visit count: ${visitCount}</div>
-    <div id="root"></div>
-    <script>
-      window.__BASEURL__ = '${basename}';
-      window.__LOCALE__ = '${locale}';
-      window.__STATICS_BASE_URL__ = '${clientTopology.staticsBaseUrl}';
-    </script>
-    <script src="${clientTopology.staticsBaseUrl}app.bundle#if(!${debug}).min#{end}.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>${title}</title>
+  <link rel="stylesheet" href="${clientTopology.staticsBaseUrl}react-client.css">
+  <link rel="stylesheet" href="${clientTopology.staticsBaseUrl}angular-client.css">
+</head>
+
+<body>
+  <div id="react-root"></div>
+
+  <div id="angular-root" ng-app="myApp">
+    <main-app></main-app>
+  </div>
+  <script>
+    window.__BASEURL__ = '${basename}';
+    window.__LOCALE__ = '${locale}';
+    window.__STATICS_BASE_URL__ = '${clientTopology.staticsBaseUrl}';
+  </script>
+  <script src="${clientTopology.staticsBaseUrl}react-client.bundle.js"></script>
+  <script src="${clientTopology.staticsBaseUrl}angular-client.bundle.js"></script>
+</body>
+
 </html>
